Fix docker script