@@ -5,10 +5,11 @@ RUN gradle shadowJar --no-daemon
 
 FROM eclipse-temurin:17-alpine
 
+WORKDIR /root/blackonionbot
 EXPOSE 187
 
 RUN mkdir /app
 
 COPY --from=build /home/gradle/src/build/libs/BlackOnion-Bot.jar /app/bot.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar","/app/bot.jar"]
+ENTRYPOINT ["java", "-jar", "/app/bot.jar"]
